--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,6 @@
 <!-- Navigation: expand-[sm, md, lg] controls the width where the menu collapses. -->
 <nav class="navbar navbar-expand-lg fixed-top">
-	<div class="container">
-		<!-- Brand and toggle get grouped for better mobile display -->
+	<div class="container"><!-- keep in container so buttons have appropriate margins -->
 		<ul class="list-inline social-buttons">
 			{% for link in site.social %}
 			<li class="list-inline-item">
