realized I didn't really need an assets folder either

--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -166,7 +166,7 @@ h6 {
 	padding: 35vh 0; /* for vertical centering */
 	color: #fff;
 	background-attachment: scroll;
-	background-image: url('{{ site.baseurl }}/assets/purple_stars.jpg');
+	background-image: url('{{ site.baseurl }}/theme/img/purple_stars.jpg');
 	background-position: center center;
 	background-repeat: none;
 	-webkit-background-size: cover;
