--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,7 @@ and all that other jazz. Doesn't appear on the page; very different from the hea
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
 	<!-- WEBSITE ICON IN BROWSER -->
-	<link rel="icon" type="image/png" href="/assets/favicon.png">
+	<link rel="icon" type="image/png" href="/theme/img/favicon.png">
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
