--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
 <html>
 
-  <style type="text/css"></style>
+  <!--link rel="stylesheet" href="{{ "../theme/style.css" | prepend: site.baseurl }}"-->
   
   {% include /js.html %}
   {% include /head.html %}
