cleaned up javascript some; began to address problem of navbar on different pages; thanks Vikram for helping me find my double-call bug

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,6 @@
 <!-- Brief About Section -->
-<section id="about">
+<a class="anchor" id="about"></a>
+<section>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
