--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -3,6 +3,13 @@
  * to "event", and now mine).
  */
 
+a.anchor {
+	display: block;
+    position: relative;
+    top: -49px;
+    visibility: hidden;
+}
+
 html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
