--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,5 +1,6 @@
 <!-- Projects Timeline Section -->
-<section id="projects" class="bg-light-gray">
+<a class="anchor" id="projects"></a>
+<section class="bg-light-gray">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
