--- a/_includes/writing.html
+++ b/_includes/writing.html
@@ -1,5 +1,6 @@
 <!-- Portfolio Grid Section -->
-<section id="writing">
+<a class="anchor" id="writing"></a>
+<section>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
