navbar links now work as expected, and hello world page looks good

--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -25,8 +25,8 @@ html {
 
 body {
 	position: absolute;
-	margin: 0;
 	padding-bottom: 90px;
+	padding-top: 65px;
 	min-height: 100%;
 	width: 100%;
 	overflow-x: hidden;
