--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -3,30 +3,20 @@
  * to "event", and now mine).
  */
 
-a.anchor {
-	display: block;
-    position: relative;
-    top: -49px;
-    visibility: hidden;
-}
-
+/* major elements */
 html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  height: 100%;
+	box-sizing: border-box;
+	height: 100%;
 }
 
 *, *:before, *:after {
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 body {
 	position: absolute;
-	padding-bottom: 90px;
-	padding-top: 65px;
+	margin: 0;
+	padding: 90px 0;
 	min-height: 100%;
 	width: 100%;
 	overflow-x: hidden;
@@ -34,23 +24,8 @@ body {
 	color: #{{ site.color.secondary-dark }};
 }
 
-/* does it actually look better to have more padding as screen gets narrower? */
-@media screen and (max-width : 1200px){
-  body {
-	  padding-bottom: 100px;
-  }
-}
 
-@media screen and (max-width : 768px){
-  body {
-	  padding-bottom: 150px;
-  }
-}
-
-.bg-light-gray {
-	background-color: #f7f7f7;
-}
-
+/* text and links */
 .text-muted {
 	color: #{{ site.color.muted }};
 }
@@ -59,6 +34,7 @@ p {
 	line-height: 1.5;
 	font-size: 110%;
 }
+
 
 a {
 	outline: 0;
@@ -72,6 +48,13 @@ a:active {
 	text-decoration: none; /* no underlining links */
 }
 
+a.anchor {
+	display: block;
+	position: relative;
+	top: -49px;
+	visibility: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -83,42 +66,14 @@ h6 {
 	font-weight: 700; /* 700 is standard bold */
 }
 
+
+/* images */
 .img-centered {
 	margin: 0 auto;
 }
 
-.btn-xl {
-	padding: 20px 40px;
-	font-size: 18px;
-	font-weight: 700;
-}
 
-.btn-sm {
-	padding: 10px 20px;
-	font-size: 14px;
-	font-weight: 700;
-}
-
-.btn-sm, .btn-xl {
-	color: #fff;
-	background-color: #{{ site.color.primary }};
-	border: none;
-	text-transform: uppercase;
-	font-family: {{ site.font.primary }};
-}
-
-.btn-sm:hover,
-.btn-sm:focus,
-.btn-sm:active,
-.btn-xl:hover,
-.btn-xl:focus,
-.btn-xl:active,
-.open .dropdown-toggle.btn-xl {
-	border-color: #{{ site.color.primary }};
-	color: #fff;
-	background-color: #{{ site.color.secondary }};
-}
-
+/* navbar */
 .navbar-toggler {
 	transition: all .3s;
 	color: #fff;
@@ -167,6 +122,40 @@ h6 {
 	}
 }
 
+.social-buttons {
+	margin-bottom: 0px;
+	display: flex;
+}
+
+.social-buttons li a {
+	display: table-cell;
+	vertical-align: middle;/*"Note that vertical-align only applies to
+	inline and table-cell elements: you can't use it to vertically align
+	block-level elements."*/
+	text-align: center;
+	font-size: 20px;
+	width: 40px;
+	height: 40px;
+	border-radius: 100%;
+	color: #fff;
+	transition: all .3s;
+	background-color: #{{ site.color.secondary-dark }};
+}
+
+ul.social-buttons li a:hover {
+	background-color: #{{ site.color.primary }};
+}
+
+@media(max-width: 768px) {
+	ul.social-buttons li a {
+		width: 35px;
+		height: 35px;
+		font-size: 18px;
+	}
+}
+
+
+/* */
 .welcome {
 	height: 100vh; /* This section is adaptively exactly one screenheight tall. Pretty slick. */
 	text-align: center;
@@ -599,38 +588,6 @@ footer ul.quicklinks {
 	line-height: 40px;
 }
 
-.social-buttons {
-	margin-bottom: 0px;
-}
-
-.social-buttons li a {
-	display: table-cell;
-	vertical-align: middle;/*"Note that vertical-align only applies to
-	inline and table-cell elements: you can't use it to vertically align
-	block-level elements."*/
-	text-align: center;
-	font-size: 20px;
-	width: 40px;
-	height: 40px;
-	border-radius: 100%;
-	outline: 0;
-	color: #fff;
-	transition: all .3s;
-	background-color: #{{ site.color.secondary-dark }};
-}
-
-ul.social-buttons li a:hover {
-	background-color: #{{ site.color.primary }};
-}
-
-@media(max-width: 768px) {
-	ul.social-buttons li a {
-		width: 35px;
-		height: 35px;
-		font-size: 18px;
-		margin-right: -7px;
-	}
-}
 
 .btn:focus,
 .btn:active,
@@ -665,9 +622,8 @@ ul.social-buttons li a:hover {
 	font-style: italic;
 }
 
-.portfolio-modal .modal-content ul.list-inline {
+.portfolio-modal .modal-content {
 	margin-top: 0;
-	margin-bottom: 30px;
 }
 
 .portfolio-modal .modal-content img {
@@ -729,4 +685,39 @@ img::-moz-selection {
 
 body {
 	webkit-tap-highlight-color: #{{ site.color.primary }};
+}
+
+
+/* stuff I'm not sure I need */
+/* buttons */
+.btn-xl {
+	padding: 20px 40px;
+	font-size: 18px;
+	font-weight: 700;
+}
+
+.btn-sm {
+	padding: 10px 20px;
+	font-size: 14px;
+	font-weight: 700;
+}
+
+.btn-sm, .btn-xl {
+	color: #fff;
+	background-color: #{{ site.color.primary }};
+	border: none;
+	text-transform: uppercase;
+	font-family: {{ site.font.primary }};
+}
+
+.btn-sm:hover,
+.btn-sm:focus,
+.btn-sm:active,
+.btn-xl:hover,
+.btn-xl:focus,
+.btn-xl:active,
+.open .dropdown-toggle.btn-xl {
+	border-color: #{{ site.color.primary }};
+	color: #fff;
+	background-color: #{{ site.color.secondary }};
 }
