--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,6 @@
 <!-- Projects Timeline Section -->
 <a class="anchor" id="projects"></a>
-<section class="bg-light-gray">
+<section style="background-color: #f7f7f7">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
