--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -67,12 +67,6 @@ h6 {
 }
 
 
-/* images */
-.img-centered {
-	margin: 0 auto;
-}
-
-
 /* navbar */
 .navbar-toggler {
 	transition: all .3s;
@@ -124,15 +118,12 @@ h6 {
 
 .social-buttons {
 	margin-bottom: 0px;
-	display: flex;
 }
 
 .social-buttons li a {
-	display: table-cell;
-	vertical-align: middle;/*"Note that vertical-align only applies to
-	inline and table-cell elements: you can't use it to vertically align
-	block-level elements."*/
-	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	font-size: 20px;
 	width: 40px;
 	height: 40px;
@@ -151,8 +142,11 @@ ul.social-buttons li a:hover {
 		width: 35px;
 		height: 35px;
 		font-size: 18px;
+		margin-right: -7px;
 	}
 }
+
+
 
 
 /* */
@@ -720,4 +714,8 @@ body {
 	border-color: #{{ site.color.primary }};
 	color: #fff;
 	background-color: #{{ site.color.secondary }};
+}
+
+.img-centered {
+	margin: 0 auto;
 }
