cleaned out pages directory and realized I don't need any but 404, so moved that and deleted pages; added jekyll-tidy to config so htmls come out neatly formatted and more readable; removed some prepending whitespace from js.html now that tidying is automatic; added grey background to welcome screen in agency.css so visitors can see the white text if the images loads slowly; removed logo.html because I don't need it; cleaned up writing folder a bit--referencing things in that folder in liquid and creating links for each of them in that section on the homepage yet to be figured out; moved quotes to writing folder

--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -181,13 +181,14 @@ footer span.copyright {
 /* welcome screen */
 .welcome {
 	height: 100vh; /* This section is adaptively exactly one screenheight tall. Pretty slick. */
-	text-align: center;
-	padding: 35vh 0; /* for vertical centering */
-	color: #fff; /* text color */
+	background: lightgray; /* So if everything but the image loads a visitor can still see something */
 	background-attachment: fixed; /* alternatively this can "scroll" with the page" */
 	background-image: url('{{ site.baseurl }}/theme/img/purple_stars.jpg');
 	background-position: center center;
 	background-size: cover;
+	text-align: center;
+	padding: 35vh 0; /* for vertical centering */
+	color: #fff; /* text color */
 }
 
 .welcome .intro-heading {
