made writing in to a collection, which involved renaming the folder and adding some things to the config; added father's day note; finished cleaning up quotes; added back an assets folder because I will actually need one for images and such as I write more, because I don't want cluter in the writing folder and that would interfere with the collection thing; added margins to blockquote format in agency.css; added end-slash to html tag in the head that Jekyll thought was an open without a close, so now the pretty html is balanced; deleted empty placeholder file

--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -52,6 +52,10 @@ section h3.section-subheading {
 	color: #{{ site.color.muted }};
 }
 
+blockquote {
+	margin: 30px;
+}
+
 p {
 	line-height: 1.5;
 	font-size: 110%;
