--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@ and all that other jazz. Doesn't appear on the page; very different from the hea
 	<link rel="stylesheet" href="{{ "../theme/style.css" | prepend: site.baseurl }}">
 
 	<!--Remove image dragging -->
-	<BODY ondragstart="return false;" ondrop="return false;">
+	<BODY ondragstart="return false;" ondrop="return false;"/>
 
 	<!-- Custom Fonts -->
 	<link rel="stylesheet" href="{{ "../theme/fontawesome/css/fontawesome-all.min.css" | prepend: site.baseurl }}">
