removed  from config since it doesn't do what I want--sticking with permalinking each file for now since I can't figure out how to permalink them all to the site root; dramatically overhauled the writing section css in to a generic, much more minimal, equally functional set of gallery classes--including hours thinking about dynamically resizing squares and  and a stackoverflow question I ultimately best answered on my own after enough playing in jsfiddle; updated writing.html to be neater and reflect new minimal classes; tweaked some things in writing, added jokes; added a cheese picture for testing and because I couldn't think of anything better to envision jokes; fixed anchor above contact section so navigation doesn't cut off the section title anymore.

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,7 +13,7 @@
 				<ul class="timeline">
 					<li>
 						<div class="timeline-image">
-							<img class="rounded-circle img-fluid" src="../theme/img/icon-about.png" alt="">
+							<img class="rounded-circle img-fluid" src="" alt="">
 						</div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
@@ -27,7 +27,7 @@
 					</li>
 					<li class="timeline-inverted">
 						<div class="timeline-image">
-							<img class="rounded-circle img-fluid" src="../theme/img/icon-agenda.png" alt="">
+							<img class="rounded-circle img-fluid" src="" alt="">
 						</div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
@@ -41,7 +41,7 @@
 					</li>
 					<li class="timeline-inverted">
 						<div class="timeline-image">
-							<img class="rounded-circle img-fluid" src="../theme/img/icon-venue.png" alt="">
+							<img class="rounded-circle img-fluid" src="" alt="">
 						</div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
@@ -55,7 +55,7 @@
 					</li>
 					<li>
 						<div class="timeline-image">
-							<img class="rounded-circle img-fluid" src="../theme/img/icon-faq.png" alt="">
+							<img class="rounded-circle img-fluid" src="" alt="">
 						</div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
@@ -69,7 +69,7 @@
 					</li>
 					<li class="timeline-inverted">
 						<div class="timeline-image">
-							<img class="rounded-circle img-fluid" src="../theme/img/booklet-icon.png" alt="">
+							<img class="rounded-circle img-fluid" src="" alt="">
 						</div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
@@ -86,9 +86,3 @@
 		</div>
 	</div>
 </section>
-
-<!--
-		{% for page in site.pages %}
-		  {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
-		{% endfor %}
- -->
