--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -21,7 +21,7 @@ body {
 	width: 100%;
 	overflow-x: hidden;
 	font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-	color: #{{ site.color.secondary-dark }};
+	color: #{{site.color.secondary-dark}};
 }
 
 
@@ -40,7 +40,7 @@ section h2.section-heading {
 section h3.section-subheading {
 	margin-bottom: 75px;
 	text-transform: none;
-	font-family: {{ site.font.secondary }};
+	font-family: {{site.font.secondary}};
 	font-size: 120%;
 	font-style: italic;
 	font-weight: 400;
@@ -49,7 +49,7 @@ section h3.section-subheading {
 
 /* text and links */
 .text-muted {
-	color: #{{ site.color.muted }};
+	color: #{{site.color.muted}};
 }
 
 blockquote {
@@ -64,13 +64,13 @@ p {
 
 a {
 	outline: 0;
-	color: #{{ site.color.primary }};
+	color: #{{site.color.primary}};
 }
 
 a:hover,
 a:focus,
 a:active {
-	color: #{{ site.color.secondary }};
+	color: #{{site.color.secondary}};
 	text-decoration: none; /* no underlining links */
 }
 
@@ -87,7 +87,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: {{ site.font.primary }};
+	font-family: {{site.font.primary}};
 	font-weight: 700; /* 700 is standard bold */
 }
 
@@ -96,29 +96,29 @@ h6 {
 .navbar-toggler {
 	transition: all .3s;
 	color: #fff;
-	background-color: #{{ site.color.primary }};
+	background-color: #{{site.color.primary}};
 }
 
 .navbar-toggler:hover{
-	background-color: #{{ site.color.secondary }};
+	background-color: #{{site.color.secondary}};
 }
 
-.nav>a:focus {
+.nav>a:focus { /* > means direct descendent, as opposed to a space, which is any descendent */
 	color: #fff; /* override the default links in focus being colored thing */
 }
 
 .nav>a:hover { /* override the override in the case of hovering a focused link */
-	color: #{{ site.color.primary }};
+	color: #{{site.color.primary}};
 }
 
 .nav>a.active {
     border-radius: 3px;
     color: #fff;
-    background-color: #{{ site.color.primary }};
+    background-color: #{{site.color.primary}};
 }
 
 .nav>a.active:hover {
-    background-color: #{{ site.color.secondary }};
+    background-color: #{{site.color.secondary}};
 }
 
 .page-scroll { /* the buttons in the navbar */
@@ -128,7 +128,7 @@ h6 {
 	padding: 0.2rem 0.6rem;
 	background-color: transparent;
 	text-transform: uppercase;
-	font-family: {{ site.font.primary }};
+	font-family: {{site.font.primary}};
 	font-weight: bold;
 	letter-spacing: 1px;
 	color: #fff;
@@ -155,11 +155,11 @@ h6 {
 	border-radius: 100%;
 	color: #fff;
 	transition: all .3s;
-	background-color: #{{ site.color.secondary-dark }};
+	background-color: #{{site.color.secondary-dark}};
 }
 
 ul.social-buttons li a:hover {
-	background-color: #{{ site.color.primary }};
+	background-color: #{{site.color.primary}};
 }
 
 @media(max-width: 768px) {
@@ -178,7 +178,7 @@ footer {
 }
 
 footer span.copyright {
-	font-family: {{ site.font.primary }};
+	font-family: {{site.font.primary}};
 }
 
 
@@ -187,7 +187,7 @@ footer span.copyright {
 	height: 100vh; /* This section is adaptively exactly one screenheight tall. Pretty slick. */
 	background: lightgray; /* So if everything but the image loads a visitor can still see something */
 	background-attachment: fixed; /* alternatively this can "scroll" with the page" */
-	background-image: url('{{ site.baseurl }}/theme/img/purple_stars.jpg');
+	background-image: url('{{site.baseurl}}/theme/img/purple_stars.jpg');
 	background-position: center center;
 	background-size: cover;
 	text-align: center;
@@ -197,7 +197,7 @@ footer span.copyright {
 
 .welcome .intro-heading {
 	text-transform: uppercase;
-	font-family: {{ site.font.primary }};
+	font-family: {{site.font.primary}};
 	font-size: 75px;
 	font-weight: 700;
 	line-height: 75px;
@@ -205,7 +205,7 @@ footer span.copyright {
 }
 
 .welcome .intro-lead-in {
-	font-family: {{ site.font.secondary }};
+	font-family: {{site.font.secondary}};
 	font-size: 40px;
 	font-style: italic;
 	line-height: 40px;
@@ -224,87 +224,48 @@ footer span.copyright {
 }
 
 
-
-
-
-
-
-
-
-
-
-/* writing links */
-#writing .writing-item {
-	right: 0;
-	margin: 0 0 15px;
-}
-
-#writing .writing-item .writing-link {
-	display: block;
+/* galleries */
+.gallery-thumbnail {
 	position: relative;
-	margin: 0 auto;
-	max-width: 400px;
-}
-
-#writing .writing-item .writing-link .writing-hover {
-	position: absolute;
+	margin-top: 20px;
 	width: 100%;
-	height: 100%;
-	opacity: 0;
-	-webkit-transition: all ease .5s;
-	-moz-transition: all ease .5s;
-	transition: all ease .5s;
-	background: #3cb371;
+	padding-bottom: 100%;
+	background: #{{site.color.primary}};
 }
 
-#writing .writing-item .writing-link .writing-hover:hover {
-	opacity: 1;
-}
-
-#writing .writing-item .writing-link .writing-hover .writing-hover-content {
+.gallery-thumbnail i {
 	position: absolute;
-	top: 50%;
-	width: 100%;
-	height: 20px;
-	margin-top: -12px;
-	text-align: center;
-	font-size: 120%;
+	font-size: 300%;
 	color: #fff;
 }
 
-#writing .writing-item .writing-link .writing-hover .writing-hover-content i {
-	margin-top: -12px;
+.gallery-thumbnail img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	object-fit: cover; /* crops center out of image */
+	transition: all ease .5s;
 }
 
-#writing .writing-item .writing-link .writing-hover .writing-hover-content h3,
-#writing .writing-item .writing-link .writing-hover .writing-hover-content h4 {
-	margin: 0;
+.gallery-thumbnail img:hover {
+	opacity: 0;
+	transition: all ease .5s;
 }
 
-#writing .writing-item .writing-caption {
-	margin: 0 auto;
-	padding-top: 25px;
-	padding-bottom: 5px;
-	max-width: 400px;
-	min-height: 100px;
+.gallery-caption {
+	padding-top: 15px;
+	min-height: 80px;
 	text-align: center;
 	background-color: #fff;
 }
 
-#writing .writing-item .writing-caption h4 {
+.gallery-caption h4 {
 	margin: 0;
-	text-transform: none;
 }
 
-#writing * {
-	z-index: 2;
-}
 
-@media(min-width:767px) {
-	#writing .writing-item {
-		margin: 0 0 30px;
-	}
-}
+
+
 
 
 
@@ -374,7 +335,7 @@ footer span.copyright {
 	border-radius: 100%;
 	text-align: center;
 	color: #fff;
-	background-color: #{{ site.color.primary }};
+	background-color: #{{site.color.primary}};
 }
 
 .timeline>li .timeline-image h4 {
@@ -513,7 +474,7 @@ footer span.copyright {
 /* contact form */
 section#contact {
 	background-color: #222;
-	background-image: url('{{ site.baseurl }}/theme/img/map-image.png');
+	background-image: url('{{site.baseurl}}/theme/img/map-image.png');
 	background-position: center;
 	background-repeat: no-repeat;
 }
@@ -540,34 +501,34 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-	border-color: #{{ site.color.primary }};
+	border-color: #{{site.color.primary}};
 	box-shadow: none;
 }
 
 section#contact::-webkit-input-placeholder {
 	text-transform: uppercase;
-	font-family: {{ site.font.primary }};
+	font-family: {{site.font.primary}};
 	font-weight: 700;
 	color: #bbb;
 }
 
 section#contact:-moz-placeholder {
 	text-transform: uppercase;
-	font-family: {{ site.font.primary }};
+	font-family: {{site.font.primary}};
 	font-weight: 700;
 	color: #bbb;
 }
 
 section#contact::-moz-placeholder {
 	text-transform: uppercase;
-	font-family: {{ site.font.primary }};
+	font-family: {{site.font.primary}};
 	font-weight: 700;
 	color: #bbb;
 }
 
 section#contact:-ms-input-placeholder {
 	text-transform: uppercase;
-	font-family: {{ site.font.primary }};
+	font-family: {{site.font.primary}};
 	font-weight: 700;
 	color: #bbb;
 }
@@ -605,7 +566,7 @@ section#contact .text-danger {
 
 .portfolio-modal .modal-content p.item-intro {
 	margin: 20px 0 30px;
-	font-family: {{ site.font.secondary }};
+	font-family: {{site.font.secondary}};
 	font-size: 100%;
 	font-style: italic;
 }
@@ -653,27 +614,6 @@ section#contact .text-danger {
 	transform: rotate(90deg);
 }
 
-::-moz-selection {
-	text-shadow: none;
-	background: #{{ site.color.primary }};
-}
-
-::selection {
-	text-shadow: none;
-	background: #f2f2f2;
-}
-
-img::selection {
-	background: 0 0;
-}
-
-img::-moz-selection {
-	background: 0 0;
-}
-
-body {
-	webkit-tap-highlight-color: #{{ site.color.primary }};
-}
 
 
 /* stuff I'm not sure I need */
@@ -692,10 +632,10 @@ body {
 
 .btn-sm, .btn-xl {
 	color: #fff;
-	background-color: #{{ site.color.primary }};
+	background-color: #{{site.color.primary}};
 	border: none;
 	text-transform: uppercase;
-	font-family: {{ site.font.primary }};
+	font-family: {{site.font.primary}};
 }
 
 .btn-sm:hover,
@@ -705,11 +645,7 @@ body {
 .btn-xl:focus,
 .btn-xl:active,
 .open .dropdown-toggle.btn-xl {
-	border-color: #{{ site.color.primary }};
+	border-color: #{{site.color.primary}};
 	color: #fff;
-	background-color: #{{ site.color.secondary }};
-}
-
-.img-centered {
-	margin: 0 auto;
+	background-color: #{{site.color.secondary}};
 }
