--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<a class="anchor" id="about"></a>
+<a class="anchor" id="contact"></a>
 <section id="contact">
 	<div class="container">
 		<div class="row">
