--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,22 +1,26 @@
 <!-- Holds all the stuff that goes in the head tag, the stuff that defines character sets, stylesheets,
 and all that other jazz. Doesn't appear on the page; very different from the header. -->
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<meta name="description" content="{{ site.description }}">
-	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-	<!-- This is from that one gem. That package gathers together a bunch of basic site
-		data and holds it in this variable.-->
-	{% seo %}
+	<!-- Open Graph -->
+	<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+	<meta property="og:description" content="{{ site.description }}">
+	<meta property="og:locale" content="en_US">
+	<meta property="og:type" content="article">
+	<meta property="og:url" content="pavelkomarov.github.io/" >
+	<meta property="og:site_name" content="Pavel's Site">
+	<meta property="og:image" content="/theme/img/favicon.png">
+
+	<link rel="icon" type="image/png" href="/theme/img/favicon.png">
+	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
 	<!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
 	<link rel="stylesheet" href="{{ "../theme/style.css" | prepend: site.baseurl }}">
-
-	<!--Remove image dragging -->
-	<BODY ondragstart="return false;" ondrop="return false;"/>
 
 	<!-- Custom Fonts -->
 	<link rel="stylesheet" href="{{ "../theme/fontawesome/css/fontawesome-all.min.css" | prepend: site.baseurl }}">
@@ -25,14 +29,4 @@ and all that other jazz. Doesn't appear on the page; very different from the hea
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
-	<!-- WEBSITE ICON IN BROWSER -->
-	<link rel="icon" type="image/png" href="/theme/img/favicon.png">
-
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	<![endif]-->
 </head>
