--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,21 +13,21 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="control-group form-group">
-								<input type="text" class="form-control" name="name" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name."WW>
+								<input type="text" class="form-control" name="name" placeholder="Name *" id="name" required data-validation-required-message="Please enter your name."WW>
 								<p class="help-block text-danger"></p>
 							</div>
 							<div class="control-group form-group">
-								<input type="email" class="form-control" name="_replyto" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+								<input type="email" class="form-control" name="_replyto" placeholder="Email *" id="email" required data-validation-required-message="Please enter your email address.">
 								<p class="help-block text-danger"></p>
 							</div>
 							<div class="control-group form-group">
-								<input type="tel" class="form-control" name="phone" placeholder="Your Phone" id="phone" required data-validation-required-message="Please enter your phone number (optional).">
+								<input type="tel" class="form-control" name="phone" placeholder="Phone" id="phone" required data-validation-required-message="Please enter your phone number (optional).">
 								<p class="help-block text-danger"></p>
 							</div>
 						</div>
 						<div class="col-md-6">
 							<div class="control-group form-group">
-								<textarea class="form-control" name="message" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+								<textarea class="form-control" name="message" placeholder="Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
 								<p class="help-block text-danger"></p>
 							</div>
 						</div>
