--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -20,7 +20,7 @@
 								<h4>Theme, Vision, Mission</h4>
 							</div>
 							<div class="timeline-heading">
-								<p class="text-muted">Read more about our Theme, Vision, and Mission</p>
+								<p>Read more about our Theme, Vision, and Mission</p>
 							</div>
 							<a href="/about" class="page-scroll btn btn-sm">Learn More</a>
 						</div>
@@ -34,7 +34,7 @@
 								<h4>Agenda</h4>
 							</div>
 							<div class="timeline-heading">
-								<p class="text-muted">Check out the agenda</p>
+								<p>Check out the agenda</p>
 							</div>
 							<a href="/agenda" class="page-scroll btn btn-sm">Learn More</a>
 						</div>
@@ -48,7 +48,7 @@
 								<h4>Venue</h4>
 							</div>
 							<div class="timeline-heading">
-								<p class="text-muted">Learn more about our location</p>
+								<p>Learn more about our location</p>
 							</div>
 							<a href="/venue" class="page-scroll btn btn-sm">Learn More</a>
 						</div>
@@ -62,7 +62,7 @@
 								<h4>FAQs</h4>
 							</div>
 							<div class="timeline-heading">
-								<p class="text-muted">Have a Question? Many answers can be found right here in our FAQs</p>
+								<p>Have a Question? Many answers can be found right here in our FAQs</p>
 							</div>
 							<a href="/faqs" class="page-scroll btn btn-sm">Learn More</a>
 						</div>
@@ -76,7 +76,7 @@
 								<h4>Event Booklet</h4>
 							</div>
 							<div class="timeline-heading">
-								<p class="text-muted">View or Download our event booklet</p>
+								<p>View or Download our event booklet</p>
 							</div>
 							<a href="/booklet" class="page-scroll btn btn-sm">Learn More</a>
 						</div>
