--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,19 +14,15 @@ and all that other jazz. Doesn't appear on the page; very different from the hea
 	<meta property="og:type" content="article">
 	<meta property="og:url" content="pavelkomarov.github.io/" >
 	<meta property="og:site_name" content="Pavel's Site">
-	<meta property="og:image" content="/theme/img/favicon.png">
+	<meta property="og:image" content="/theme/favicon.png">
 
-	<link rel="icon" type="image/png" href="/theme/img/favicon.png">
-	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+	<link rel="icon" type="image/png" href="/theme/favicon.png">
+	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 
-	<!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-	<link rel="stylesheet" href="{{ "../theme/style.css" | prepend: site.baseurl }}">
+	<!-- Bootstrap css and my custom theme's css -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+	<link rel="stylesheet" href="../theme/agency.css">
 
 	<!-- Custom Fonts -->
-	<link rel="stylesheet" href="{{ "../theme/fontawesome/css/fontawesome-all.min.css" | prepend: site.baseurl }}">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-	<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-	<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 </head>
