--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,11 +1,5 @@
-<!-- jQuery Version 1.11.0 -->
-<script src="{{ "../theme/js/jquery-1.11.0.js" | prepend: site.baseurl }}"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="{{ "../theme/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
-
-<!-- Plugin JavaScript -->
-<script src="{{ "../theme/js/jquery.easing.min.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap.native@2.0.27/dist/bootstrap-native-v4.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ "../theme/js/agency.js" | prepend: site.baseurl }}"></script>
+<script src="../theme/agency.js"></script>
