renamed header to navbar so as to be less confusable with the head and because I think navbar is more descriptive; removed contact me from the navbar, since I removed that section because fuck they have my email for crying out loud; trying a scheme to load a lighter version of the background image first, then replace with the 9.3MB version after based on the answer here https://stackoverflow.com/questions/27934548/load-a-low-res-background-image-first-then-a-high-res-one

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,7 +14,7 @@
 
 		<p>My aspirations are evolving, but I am deeply interested in Math, Computer Science, that intersection of the two called Machine Learning, Finance, developments in Tissue Engineering, ponderings like Man's Search for Meaning, and pragmatic tips on how to live a fuller life.</p>
 
-		<p>I'm always open to hearing about opportunities that fit my skill set, so if the below makes you curious, reach out. You will find links to my email, resume, github, etc. in the header.</p>
+		<p>I'm always open to hearing about opportunities that fit my skill set, so if the below makes you curious, reach out. You will find links to my email, resume, github, etc. above.</p>
 
 	</div>
 </section>
