--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,7 +19,7 @@
 				<a class="nav-link page-scroll" href="#about">About</a>
 				<a class="nav-link page-scroll" href="#projects">Projects</a>
 				<a class="nav-link page-scroll" href="#writing">Writing</a>
-				<a class="nav-link page-scroll" href="#contact">Contact</a>
+				<!--a class="nav-link page-scroll" href="#contact">Contact</a-->
 			</ul>
 		</div>
 	</div>
