--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <!-- Holds all the stuff that goes in the head tag, the stuff that defines character sets, stylesheets,
-and all that other jazz. Doesn't appear on the page; very different from the header. -->
+and all that other jazz. Doesn't appear on the page, but is essential for search, linking, and tab titling. -->
 <head>
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
