--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 	{% include head.html %}
 
 	<body>
-	{% include header.html %}
+	{% include navbar.html %}
 
 	<div class="container">
 	{{content}}
