added picture of me in the snow to the theme, because I'll find some use for it, I'm sure; figured out a way to do low-res-then-high-res loading in pure css by reading more of that thread, implemented that instead

--- a/theme/agency.css
+++ b/theme/agency.css
@@ -169,10 +169,10 @@ ul.social-buttons li a:hover {
 .welcome {
 	height: 100vh; /* This section is adaptively exactly one screenheight tall. Pretty slick. */
 	background: lightgray; /* So if everything but the image loads a visitor can still see something */
-	background-attachment: fixed; /* alternatively this can "scroll" with the page" */
-	background-image: url('purple_stars_light.jpg');
-	background-position: center center;
-	background-size: cover;
+	background-attachment: fixed, fixed; /* alternatively this can "scroll" with the page" */
+	background-image: url('purple_stars.jpg'), url('purple_stars_light.jpg');
+	background-position: center center, center center;
+	background-size: cover, cover;
 	text-align: center;
 	padding: 35vh 0; /* for vertical centering */
 	color: #fff; /* text color */
@@ -194,9 +194,6 @@ ul.social-buttons li a:hover {
 	line-height: 40px;
 }
 
-.hidden {
-	display: none;
-}
 
 @media(max-width:768px) {
 	.welcome .intro-heading {
