added back bootstrap css in actual project, because at work today my site wouldn't render with css, which means the proxy was blocking the cdn. Hadn't considered that this might be a risk with cdns, that a client might not like the multiorigin aspect. It's just one small file to add back to make sure it always works, so whatever.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,8 @@ and all that other jazz. Doesn't appear on the page, but is essential for search
 	<link rel="icon" type="image/png" href="/theme/favicon.png">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 
-	<!-- Bootstrap css and my custom theme's css -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+	<!-- Bootstrap 4.3.1 css and my custom theme's css -->
+	<link rel="stylesheet" href="../theme/bootstrap.min.css">
 	<link rel="stylesheet" href="../theme/agency.css">
 
 	<!-- Custom Fonts -->
